--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,9 @@ body {
 }
 
 
-.logo-img {
-    max-height: 40px;
-    width: auto;    
+.logo-img {  
     display: block;
+    width: 100%;
 }
 
 .logo a {
@@ -133,18 +132,18 @@ body {
     transition: var(--transition);
 }
 
-/* Background Section */
-.background-section {
+/* Banner Section */
+.banner-section{ 
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('images/BackGround.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding-top: 80px;
-    position: relative;
     overflow: hidden;
+    background-color: #e32160;
+    background-image: url("images/Cópia\ de\ \ Projeto\ Fepro\ 2026\ -\ SEBRAE.png");
+    background-size: cover;          /* cobre todo o espaço */
+    background-position: center center;     /* centraliza a imagem */
+    background-repeat: no-repeat;
+    margin-top: 70px;
 }
 
 /* Hero Section */
@@ -939,15 +938,14 @@ body {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
-    .hero-title {
-        display: none;
-    }
-    
-    .mobile-menu-toggle {
-        display: flex;
-    }
 
+@media (max-width: 1024px) {
+ .banner-section { 
+    background-size: contain;
+ }
+}
+
+@media (max-width: 940px) {
     .nav-menu {
         position: fixed;
         top: 70px;
@@ -965,6 +963,17 @@ body {
         left: 0;
     }
 
+    .mobile-menu-toggle {
+        display: flex;
+        overflow: hidden;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero-title {
+        display: none;
+    }
+    
     .hero-title {
         font-size: 2.5rem;
     }
@@ -997,6 +1006,18 @@ body {
     .btn {
         width: 100%;
         text-align: center;
+    }
+
+    .banner-section {
+        background-image: url(images/BannerMobileSecondary.png);
+        min-height: 75vh;
+        background-size: cover;
+    }
+}
+
+@media (max-width: 575px) { 
+    .banner-section {
+        min-height: 55vh;
     }
 }
 
