--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ body {
     align-items: center;
     overflow: hidden;
     background-color: #e32160;
-    background-image: url("images/Banner.png");
+    background-image: url("assets/banners/Banner.png");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -1033,7 +1033,7 @@ img {
     }
 
     .hero-section {
-        background-image: url(images/BannerMobileSecondary.png);
+        background-image: url("assets/BannerMobile.png");
         min-height: 75vh;
         background-size: cover;
     }
