--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ body {
     overflow: hidden;
     background-color: #e32160;
     background-image: url("assets/banners/Banner.png");
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
     margin-top: 70px;
@@ -703,6 +703,14 @@ img {
     margin-bottom: 1rem;
 }
 
+.partners-logo img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+}
+
 .partners-tier {
     font-size: 1.3rem;
     font-weight: 700;
@@ -961,11 +969,6 @@ img {
 
 /* Responsive Design */
 
-@media (max-width: 1024px) {
- .hero-section { 
-    background-size: contain;
- }
-}
 
 @media (max-width: 940px) {
     .nav-menu {
@@ -1033,7 +1036,7 @@ img {
     }
 
     .hero-section {
-        background-image: url("assets/BannerMobile.png");
+        background-image: url("assets/banners/BannerMobile.png");
         min-height: 75vh;
         background-size: cover;
     }
