--- a/styles.css
+++ b/styles.css
@@ -950,7 +950,7 @@ img {
     cursor: grab;
     user-select: none;
     border-radius: 16px;
-    padding-top: 10px 4px;
+    padding: 10px 2px;
 }
 
 .carousel-container:active {
