style: further refine image padding in carousel for optimal visual balance

--- a/styles.css
+++ b/styles.css
@@ -950,7 +950,8 @@ img {
     cursor: grab;
     user-select: none;
     border-radius: 16px;
-    padding: 10px 2px;
+    padding-top: 10px;
+    padding: 10px 2px 0px 2px;
 }
 
 .carousel-container:active {
