--- a/styles.css
+++ b/styles.css
@@ -505,6 +505,21 @@ img {
     z-index: 1;
 }
 
+.spotify-player {
+    margin-top: 4rem;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .spotify-player iframe {
+    width: 100%;
+    height: 152px;
+    border-radius: 12px;
+    border: none;
+  }
+  
+
 .stat-card {
     background: white;
     padding: 2rem;
